<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MagicTrickDetailActivity.MagicTrickDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_preview"

            android:layout_width="0dp"
            android:layout_height="300dp"
            android:contentDescription="@string/content_description_preview_image"
            android:scaleType="centerCrop"
            android:transitionName="@string/image_preview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/trick_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/trick_title"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="@color/color_black_text"
            android:transitionName="@string/trick_title"
            app:layout_constraintEnd_toStartOf="@+id/watch_youtube_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_preview"
            tools:text="@string/trick_title" />

        <TextView
            android:id="@+id/trick_description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trick_difficulty_bar" />

        <TextView
            android:id="@+id/trick_owner_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/owner"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:transitionName="@string/owner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trick_title_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/watch_youtube_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:text="@string/watch_youtube_video"
            android:textColor="@color/red"
            android:visibility="visible"
            app:icon="@drawable/youtube_icon"
            app:iconTint="#FF0000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_preview"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/trick_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trick_owner_text" />

        <TextView
            android:id="@+id/step_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/steps"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trick_description_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/step_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:nestedScrollingEnabled="false"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_label"
            app:layout_constraintVertical_bias="1.0" />

        <RatingBar
            android:id="@+id/trick_difficulty_bar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:indeterminate="false"
            android:isIndicator="true"
            android:max="4"
            android:numStars="5"
            android:progress="0"
            android:rating="1"
            android:stepSize="1"
            android:transitionName="@string/difficulty_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trick_owner_text" />

        <TextView
            android:id="@+id/trick_difficulty_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/difficultyLabelPrefix"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trick_owner_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
