<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="afterDescendants">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            tools:context=".Activities.MagicTrickEditAddActivity.MagicTrickEditAddActivity">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/name"
                android:textColorHint="#000000"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="32"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toTopOf="@+id/ownerInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ownerInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/owner"
                android:textColorHint="#000000"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="32"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.312"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textColorHint="#000000"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="256"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/mtrl_ic_error"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ownerInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardtest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:padding="30dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="16dp"
                app:layout_constraintTop_toBottomOf="@+id/descInput">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image_preview"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:contentDescription="@string/content_description_preview_image"
                        android:scaleType="centerCrop"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/broken_image" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/selectYoutubeButton"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"

                        android:text="@string/select_youtube_video"
                        app:icon="@drawable/youtube_icon"
                        app:iconTint="#FF0000"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/image_preview" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/selectImageButton"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"

                        android:text="@string/select_image"
                        app:icon="@drawable/ic_insert_photo_24px"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/image_preview" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>


            <View
                android:id="@+id/divider"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardtest" />

            <TextView
                android:id="@+id/stepsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/steps"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/step_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="16dp"
                android:scrollbars="none"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stepsLabel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addStepButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/add_step"
                android:text="@string/add_step"
                app:icon="@drawable/ic_add_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/trick_difficulty_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/difficulty_1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/step_recycler_view" />


            <RatingBar
                android:id="@+id/trick_difficulty_bar"
                style="@style/Widget.AppCompat.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:numStars="5"
                android:rating="1"
                android:stepSize="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/trick_difficulty_label"
                app:layout_constraintTop_toBottomOf="@+id/step_recycler_view">

            </RatingBar>

            <View
                android:id="@+id/divider2"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trick_difficulty_bar" />

            <HorizontalScrollView
                android:id="@+id/difficulty_chip_group_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/divider2">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/difficulty_chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider2"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_false_shuffle"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Shuffle" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_false_cut"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="False Cut" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_palm"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Palm" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_force"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Force" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_color_change"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Color Change" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_impromptu"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Impromptu" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_mentalism"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mentalism" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_gimmick"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Gimmick" />

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/removeCancelButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:text="@android:string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/saveButton"
                app:layout_constraintTop_toBottomOf="@+id/difficulty_chip_group_scroll" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>


